--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
     "tailwindcss": "^1.8.12"
   },
   "scripts": {
